[taotao-cloud-project-1820] update[ lock  ]