@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020-2030, Shuigedeng (981376577@qq.com & https://blog.taotaocloud.top/).
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,17 +15,16 @@
  */
 package com.taotao.cloud.common.model;
 
+import cn.hutool.core.bean.BeanUtil;
 import com.baomidou.mybatisplus.core.metadata.IPage;
-import com.taotao.cloud.common.utils.common.OrikaUtils;
 import io.swagger.v3.oas.annotations.media.Schema;
 import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import org.springframework.data.domain.Page;
 
 /**
@@ -36,55 +35,63 @@ import org.springframework.data.domain.Page;
  * @since 2021-09-02 19:09:19
  */
 @Schema(description = "分页结果对象")
-public record PageResult<R>(
+public class PageResult<R> implements Serializable {
+
+	@Serial
+	private static final long serialVersionUID = -275582248840137389L;
 	/**
 	 * 总条数
 	 */
 	@Schema(description = "总条数")
-	long totalSize,
+	private long totalSize;
 	/**
 	 * 总页数
 	 */
 	@Schema(description = "总页数")
-	int totalPage,
+	private int totalPage;
 	/**
 	 * 当前第几页
 	 */
 	@Schema(description = "当前第几页")
-	int currentPage,
+	private int currentPage;
 	/**
 	 * 每页显示条数
 	 */
 	@Schema(description = "每页显示条数")
-	int pageSize,
+	private int pageSize;
 	/**
 	 * 返回数据
 	 */
 	@Schema(description = "返回数据")
-	List<R> data) implements Serializable {
+	private List<R> data;
 
-	@Serial
-	private static final long serialVersionUID = -275582248840137389L;
+	public PageResult() {
+	}
 
-	public static <R, T> PageResult<R> convertJpaPage(Page<T> page, Class<R> rClass) {
-		return convertJpaPage(page, rClass, new HashMap<>());
+	public PageResult(long totalSize, int totalPage, int currentPage, int pageSize,
+		List<R> data) {
+		this.totalSize = totalSize;
+		this.totalPage = totalPage;
+		this.currentPage = currentPage;
+		this.pageSize = pageSize;
+		this.data = data;
 	}
 
 	/**
-	 * 转换JpaPage
+	 * convertJpaPage
 	 *
-	 * @param page page数据
-	 * @return 分页对象
+	 * @param page page
+	 * @param <R>  R
+	 * @return {@link PageResult }
 	 * @since 2021-09-02 19:10:45
 	 */
-	public static <R, T> PageResult<R> convertJpaPage(Page<T> page, Class<R> rClass,
-													  Map<String, String> configMap) {
+	public static <R, T> PageResult<R> convertJpaPage(Page<T> page, Class<R> r) {
 		List<T> records = page.getContent();
 		List<R> collect = Optional.of(records)
 			.orElse(new ArrayList<>())
 			.stream().filter(Objects::nonNull)
-			.map(t -> OrikaUtils.convert(t, rClass, configMap))
-			.toList();
+			.map(t -> BeanUtil.toBean(t, r)).collect(Collectors.toList());
+
 		return of(
 			page.getTotalElements(),
 			page.getTotalPages(),
@@ -94,25 +101,20 @@ public record PageResult<R>(
 		);
 	}
 
-	public static <R, T> PageResult<R> convertMybatisPage(IPage<T> page, Class<R> rClass) {
-		return convertMybatisPage(page, rClass, new HashMap<>());
-	}
-
 	/**
-	 * 转换MybatisPage
+	 * convertMybatisPage
 	 *
-	 * @param page page数据
-	 * @return 分页对象
+	 * @param page page
+	 * @param <R>  R
+	 * @return {@link PageResult }
 	 * @since 2021-09-02 19:10:49
 	 */
-	public static <R, T> PageResult<R> convertMybatisPage(IPage<T> page, Class<R> rClass,
-														  Map<String, String> configMap) {
+	public static <R, T> PageResult<R> convertMybatisPage(IPage<T> page, Class<R> r) {
 		List<T> records = page.getRecords();
 		List<R> collect = Optional.ofNullable(records)
 			.orElse(new ArrayList<>())
 			.stream().filter(Objects::nonNull)
-			.map(t -> OrikaUtils.convert(t, rClass, configMap))
-			.toList();
+			.map(t -> BeanUtil.toBean(t, r)).collect(Collectors.toList());
 
 		return of(
 			page.getTotal(),
@@ -124,14 +126,15 @@ public record PageResult<R>(
 	}
 
 	/**
-	 * 构造分页对象
+	 * of
 	 *
-	 * @param totalSize   总数
-	 * @param totalPage   总页数
-	 * @param currentPage 当前页
-	 * @param pageSize    一页数据量
-	 * @param data        数据
-	 * @return 分页对象
+	 * @param totalSize   totalSize
+	 * @param totalPage   totalPage
+	 * @param currentPage currentPage
+	 * @param pageSize    pageSize
+	 * @param data        data
+	 * @param <R>         R
+	 * @return {@link PageResult }
 	 * @since 2021-09-02 19:11:10
 	 */
 	public static <R> PageResult<R> of(
@@ -140,6 +143,104 @@ public record PageResult<R>(
 		int currentPage,
 		int pageSize,
 		List<R> data) {
-		return new PageResult<>(totalSize, totalPage, currentPage, pageSize, data);
+		return PageResult
+			.<R>builder()
+			.totalSize(totalSize)
+			.totalPage(totalPage)
+			.currentPage(currentPage)
+			.pageSize(pageSize)
+			.data(data)
+			.build();
+	}
+
+	public long getTotalSize() {
+		return totalSize;
+	}
+
+	public void setTotalSize(long totalSize) {
+		this.totalSize = totalSize;
+	}
+
+	public int getTotalPage() {
+		return totalPage;
+	}
+
+	public void setTotalPage(int totalPage) {
+		this.totalPage = totalPage;
+	}
+
+	public int getCurrentPage() {
+		return currentPage;
+	}
+
+	public void setCurrentPage(int currentPage) {
+		this.currentPage = currentPage;
+	}
+
+	public int getPageSize() {
+		return pageSize;
+	}
+
+	public void setPageSize(int pageSize) {
+		this.pageSize = pageSize;
+	}
+
+	public List<R> getData() {
+		return data;
+	}
+
+	public void setData(List<R> data) {
+		this.data = data;
+	}
+
+	public static <R> PageModelBuilder<R> builder() {
+		return new PageModelBuilder<>();
+	}
+
+	public static final class PageModelBuilder<R> {
+
+		private long totalSize;
+		private int totalPage;
+		private int currentPage;
+		private int pageSize;
+		private List<R> data;
+
+		private PageModelBuilder() {
+		}
+
+		public PageModelBuilder<R> totalSize(long totalSize) {
+			this.totalSize = totalSize;
+			return this;
+		}
+
+		public PageModelBuilder<R> totalPage(int totalPage) {
+			this.totalPage = totalPage;
+			return this;
+		}
+
+		public PageModelBuilder<R> currentPage(int currentPage) {
+			this.currentPage = currentPage;
+			return this;
+		}
+
+		public PageModelBuilder<R> pageSize(int pageSize) {
+			this.pageSize = pageSize;
+			return this;
+		}
+
+		public PageModelBuilder<R> data(List<R> data) {
+			this.data = data;
+			return this;
+		}
+
+		public PageResult<R> build() {
+			PageResult<R> pageModel = new PageResult<>();
+			pageModel.setTotalSize(totalSize);
+			pageModel.setTotalPage(totalPage);
+			pageModel.setCurrentPage(currentPage);
+			pageModel.setPageSize(pageSize);
+			pageModel.setData(data);
+			return pageModel;
+		}
 	}
 }
